# defold

./: .clang-format  .cproject  .gitattributes  .gitignore  .project  .pydevproject  CMakeLists.txt  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  COMPLYING_WITH_LICENSES.md  CONTRIBUTING.md  LICENSE.txt  NOTICE  README  README.md  README.txt  README_ANDROID.md  README_BOX2D_THREADPOOL.md  README_BUILD.md  README_CI.md  README_DEBUGGING.md  README_DOCS.md  README_EMSCRIPTEN.md  README_ENGINE.md  README_IOS.md  README_NATIVE_EXTENSION.md  README_SETUP.md  README_SETUP_LINUX.md  README_SETUP_MACOS.md  README_SETUP_WINDOWS.md  README_SWITCH.md  README_TVOS.md  RELEASE.md  RELEASE_EGS.md  RELEASE_STEAM.md  SECURITY.md  SWITCH_TO_DEV.md  TEST.md  TODO  TOOLS_LICENSES.md  (+32 more)
engine/crash/: CMakeLists.txt  wscript
engine/crash/src/: backtrace_android.cpp  backtrace_execinfo.cpp  backtrace_jsweb.c  backtrace_jsweb.cpp  backtrace_libunwind.cpp  backtrace_libunwind_ndk.cpp  backtrace_null.cpp  backtrace_web.cpp  backtrace_win32.cpp  crash.cpp  crash.h  crash_handler.js  crash_null.cpp  crash_private.h  extension.cpp  file_null.cpp  file_posix.cpp  file_win32.cpp  load_addrs_elf.cpp  load_addrs_mach.cpp  load_addrs_null.cpp  load_addrs_proc_smap.cpp  load_addrs_win32.cpp  script_crash.cpp  script_crash_null.cpp  wscript
engine/ddf/: .gitignore  CMakeLists.txt  wscript
engine/ddf/src/: ddf_hash.py  ddfc.py  ddfc_cxx  ddfc_cxx.bat  ddfc_java  ddfc_sol  ddfc_sol.bat  waf_ddf.py  wscript
engine/dlib/: CMakeLists.txt  README.md  build - Shortcut.lnk  log.txt  run_server.py  sdk_gen.json  test_http_server.pid  wscript  wscript2
engine/dlib/data/: profiler.html
engine/dlib/scripts/: gen_curve_doc.py  gen_easing.cpp  gen_trig_lookup.py  run_http_server_standalone.py  run_test_memprofile.sh  start_http_server.sh  stop_http_server.sh  trig_lookup_template.cpp  trig_lookup_template.h
engine/dlib/src/: wscript  wscript2
engine/engine/: .gitignore  CMakeLists.txt  loop.sh  wscript
engine/engine/content/: profiler.html  wscript
engine/engine/proto/: engine_ddf.proto
engine/engine/scripts/: build_cmake_content.py  dmengine_memprofile.sh
engine/engine/src/: engine.cpp  engine.h  engine.rc  engine_doc.h  engine_loop.cpp  engine_main.cpp  engine_private.h  engine_service.cpp  engine_service.h  engine_service_discovery.cpp  engine_service_discovery.h  engine_service_discovery_ios.mm  engine_service_null.cpp  engine_service_private.h  engine_template.html  engine_version.h  engine_web.cpp  engine_web.h  extension.cpp  extension.h  main.cpp  physics_debug_render.cpp  physics_debug_render.h  profile_render.cpp  profile_render.h  wscript
engine/extension/: CMakeLists.txt  sdk_gen.json  wscript
engine/extension/src/: extension.cpp  extension.h  extension.hpp  extension_android.cpp  extension_ios.cpp  wscript
engine/font/: CMakeLists.txt  wscript
engine/font/src/: font.cpp  font.h  font_private.h  font_ttf.cpp  font_ttf.h  fontcollection.cpp  fontcollection.h  fontgen.cpp  fontgen.h  res_ttf.cpp  res_ttf.h  script_font.cpp  script_fontgen.cpp  text_layout.cpp  text_layout.h  text_layout_legacy.cpp  text_layout_skribidi.cpp  util.cpp  util.h  wscript
engine/gameobject/: CMakeLists.txt  wscript
engine/gameobject/proto/: gameobject_ddf.proto  lua_ddf.proto  properties_ddf.proto
engine/gameobject/src/: wscript
engine/gamesys/: .gitignore  CMakeLists.txt  run_test_server.py  test.sh  wscript
engine/gamesys/content/: wscript
engine/gamesys/proto/: atlas_ddf.proto  buffer_ddf.proto  camera_ddf.proto  gamesys_ddf.proto  gui_ddf.proto  label_ddf.proto  mesh_ddf.proto  model_ddf.proto  physics_ddf.proto  rig_ddf.proto  sound_ddf.proto  spine_ddf.proto  sprite_ddf.proto  texture_set_ddf.proto  tile_ddf.proto  wscript
engine/gamesys/src/: proto_gamesys.py  waf_gamesys.py  wscript
engine/gamesys/tools/: meshc.py
engine/graphics/: .gitignore  CMakeLists.txt  sdk_gen.json  wscript
engine/graphics/proto/: graphics_ddf.proto
engine/graphics/src/: dds.py  glfw.h  graphics.cpp  graphics.h  graphics_adapter.h  graphics_glfw_wrappers.cpp  graphics_native.h  graphics_private.h  graphics_proto.cpp  graphics_reflection.h  graphics_util.h  graphics_vertices.cpp  pvrtc.py  texc.py  waf_graphics.py  wscript
engine/gui/: CMakeLists.txt  wscript
engine/gui/src/: gui.cpp  gui.h  gui_null.cpp  gui_private.h  gui_script.cpp  gui_script.h  wscript
engine/hid/: .gitignore  CMakeLists.txt  wscript
engine/hid/scripts/: genie.lua  test.py
engine/hid/src/: hid.cpp  hid.h  hid_glfw.cpp  hid_glfw_defines.h  hid_guid.cpp  hid_native.cpp  hid_native_defines.h  hid_null.cpp  hid_private.h  wscript
engine/input/: CMakeLists.txt  wscript
engine/input/proto/: input_ddf.proto
engine/input/src/: input.cpp  input.h  input_private.h  mouse_capture.cpp  mouse_capture.h  mouse_capture_linux.cpp  mouse_capture_windows.cpp  wscript
engine/jni/: .gitignore  CMakeLists.txt  wscript
engine/jni/scripts/: gen_java.py
engine/jni/src/: jni_util.cpp  jni_util.h  wscript
engine/liveupdate/: CMakeLists.txt  test.sh  wscript
engine/liveupdate/proto/: manifest_ddf.proto
engine/liveupdate/src/: job_thread.cpp  job_thread.h  liveupdate.cpp  liveupdate.h  liveupdate_archive.cpp  liveupdate_async.cpp  liveupdate_null.cpp  liveupdate_private.cpp  liveupdate_private.h  wscript  (+5 more)
engine/lua/: CMakeLists.txt  sdk_gen.json  wscript
engine/modelc/: CMakeLists.txt  README.md  wscript
engine/particle/: CMakeLists.txt  wscript
engine/physics/: CMakeLists.txt  wscript
engine/platform/: CMakeLists.txt  wscript
engine/profiler/: CMakeLists.txt  wscript
engine/record/: .gitignore  CMakeLists.txt  wscript
engine/render/: CMakeLists.txt  README.md  wscript
engine/resource/: CMakeLists.txt  sdk_gen.json  wscript
engine/rig/: CMakeLists.txt  wscript
engine/script/: CMakeLists.txt  README.md  server.py  test_script_server.py  wscript
engine/sdk/: CMakeLists.txt  README.md  wscript
engine/shaderc/: CMakeLists.txt  wscript
engine/sound/: CMakeLists.txt  README.md  wscript
engine/testmain/: CMakeLists.txt  wscript
(+14317 files in other folders)
